--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ on: push
 
 jobs:
   build:
-      run-ons: ubuntu-latest
-    
+      runs-on: ubuntu-latest
       steps: 
-        - uses: actions/checkout@v3 
-        - name: Run a Sample Github action
-          run: echo "Hola ronal"
+       - uses: actions/checkout@v3 
+        
+       - name: Run a Sample Github action
+         run: echo "Hola ronal"
