--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,6 @@ jobs:
         
        - name: Run a Sample Github action
          run: echo "Hola ronal"
+         
+       - name: Probar error
+         run: echo "Simular que hay un error"; exit 1
