--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -7,8 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Super-Linter
-      uses: github/super-linter@v4.10.1
-
+    - name: Lint Code Base
+      uses: github/super-linter@v4
+      env:
+        VALIDATE_ALL_CODEBASE: false
+        DEFAULT_BRANCH: master
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
   
